unpackaged/main/default/objects/sked_Location_Inspection_Detail__c/fields/sked_Location_Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>sked_Location_Inspected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Inspected By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Location Inspection Details</relationshipLabel>
    <relationshipName>sked_Site_Inspection_Details</relationshipName>
    <type>Lookup</type>
</CustomField>