unpackaged/main/default/objects/sked_Location_Inspection_Detail__c/fields/sked_Location_Inspected_On__c.field-meta.xml
<CustomField>
    <fullName>sked_Location_Inspected_On__c</fullName>
    <label>Location Inspected On</label>
    <type>DateTime</type>
</CustomField>