unpackaged/main/default/objects/sked_Location_Inspection_Detail__c/fields/sked_Location_Inspection_Comments__c.field-meta.xml
<CustomField>
    <fullName>sked_Location_Inspection_Comments__c</fullName>
    <label>Location Inspection Comments</label>
    <type>TextArea</type>
</CustomField>